--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0"
   }
