--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.3.0",
     "@types/jest": "^26.0.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
