--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "happy-dom": "^14.12.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "vite": "^5.2.13",
