--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@types/semver": "^7.7.1",
     "@vitejs/plugin-react": "^5.1.2",
-    "autoprefixer": "^10.4.23",
     "happy-dom": "^20.3.1",
     "oxfmt": "^0.24.0",
     "oxlint": "^1.39.0",
